--- a/Projects/leon/index.html
+++ b/Projects/leon/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav>
             <div class="container">
-                <img decoding="async" src="/images/Hello-images/logo.png" alt="logo.png">
+                <img decoding="async" src="Hello-images/logo.png" alt="logo.png">
                 <div class="links" id="bar">
                     <span class="icon">
                         <span></span>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="img-col">
                         <div class="srv-image">
-                            <img src="/images/Hello-images/services.jpg" alt="">
+                            <img src="Hello-images/services.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -137,21 +137,21 @@
                 </div>
                 <div class="container">
                     <div class="portfolio-card">
-                        <img src="/images/Hello-images/portfolio-1.jpg" alt="project1">
+                        <img src="Hello-images/portfolio-1.jpg" alt="project1">
                         <div class="portfolio-content">
                             <h3>Project Here</h3>
                             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
                         </div>
                     </div>
                     <div class="portfolio-card">
-                        <img src="/images/Hello-images/portfolio-2.jpg" alt="project1">
+                        <img src="Hello-images/portfolio-2.jpg" alt="project1">
                         <div class="portfolio-content">
                             <h3>Project Here</h3>
                             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
                         </div>
                     </div>
                     <div class="portfolio-card">
-                        <img src="/images/Hello-images/portfolio-3.jpg" alt="project1">
+                        <img src="Hello-images/portfolio-3.jpg" alt="project1">
                         <div class="portfolio-content">
                             <h3>Project Here</h3>
                             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
@@ -169,7 +169,7 @@
             </div>
             <div class="container">
                 <div class="about-img">
-                    <img src="/images/Hello-images/about.jpg" alt="">
+                    <img src="Hello-images/about.jpg" alt="">
                 </div>
                 <div class="about-content">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, architecto. Molestias voluptas deserunt repellendus accusantium odio? Excepturi nisi, magni quam asperiores</p>
